--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <title>Tile-fighter</title>
+    <style>
+        canvas {
+            cursor: inherit;
+            padding-left: 0;
+            padding-right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <script src=".generated/bundle.js"></script>
