FPS counter added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     </style>
 </head>
 <body>
-    <script src=".generated/bundle.js"></script>
+<script>
+    javascript:(function () {
+        var script = document.createElement('script');
+        script.onload = function () {
+            var stats = new Stats();
+            stats.domElement.style.cssText = 'position:fixed;right:0;top:10px;z-index:10000';
+            document.body.appendChild(stats.domElement);
+            requestAnimationFrame(function loop() {
+                stats.update();
+                requestAnimationFrame(loop)
+            });
+        };
+        script.src = '//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';
+        document.head.appendChild(script);
+    })()
+</script>
+<script src=".generated/bundle.js"></script>
 </body>
 </html>
