--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <script>
-    javascript:(function () {
+    (function () {
         var script = document.createElement('script');
         script.onload = function () {
             var stats = new Stats();
