Write simple NodeJS server for HTML+JS serving

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
             display: block;
         }
     </style>
+    <link rel="icon" href="data:;base64,=">
 </head>
 <body>
 <script>
@@ -31,6 +32,6 @@
         document.head.appendChild(script);
     })()
 </script>
-<script src=".generated/bundle.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
